samples/_failures_safe/1761168692_819fff_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_80d5c11b.c: In function ‘main’:
./samples/SAFE/__tmp_80d5c11b.c:157:9: error: expected expression at end of input
  157 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_80d5c11b.c:157:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_80d5c11b.c:157:9: error: expected declaration or statement at end of input
